# solana-capnp-demo

./: README.md
capnp-models/: Cargo.toml
capnp-models/src/: build.rs  lib.rs  person_capnp.rs  schema_capnp.rs
client/: borsh_demo_client.ts  capnp_demo_client.ts  package-lock.json  package.json
program/: .gitignore  Cargo.toml
program/src/: lib.rs
program/tests/: person.capnp  person_capnp.rs  schema_test.rs
