[package]
edition = "2021"
rust-version = "1.60"
version = "0.1.0-alpha.1"
license = "Apache-2.0"
resolver = "2"
name = "solana_capnp_demo"

[dependencies]
borsh = "0.10.3"
solana-program = "=1.16.18"
capnp-models = {path = "../capnp-models"}
bryte_descriptor_attribute = "0.1.0-alpha.2"
bryte_descriptor_state = "0.1.0-alpha.2"

borsh-serde-adapter = "0.1.0"
borsh-schema-writer = "0.1.0"
bytes = "1.5.0"
capnp = "0.18.10"

[dev-dependencies]
tokio-test = "0.4.3"
tokio = { version = "1.32.0", features = ["macros"] }
bryte_descriptor_client = "0.1.0-alpha.3"
capnpc = "0.18.0"

[lib]
crate-type = ["cdylib", "lib"]